# bubbaloop

./: .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LANCEDB_RECORDER_PLAN.md  README.md  ROADMAP.md  SUMMARY.md  bubbaloop.ron  build.rs  config.yaml  justfile  mkdocs.yml  package-lock.json  package.json  pipelines.md  pixi.toml  process-compose-dashboard.yaml  process-compose.yaml  quickstart.md  release-please-config.json  usage.md  zenoh.json5
crates/bubbaloop/: Cargo.toml  build.rs
crates/bubbaloop-daemon/: Cargo.toml  README.md  build.rs  node.yaml  pixi.toml
crates/bubbaloop-daemon/src/: http_server.rs  lib.rs  main.rs  node_manager.rs  registry.rs  systemd.rs  zenoh_api.rs  zenoh_service.rs
crates/bubbaloop-daemon/tests/: README.md  coordination_scenarios.rs  pubsub_integration.rs  queryable_integration.rs  run_coordination_tests.sh  zenoh_service_tests.rs
crates/bubbaloop-daemon/tests/common/: mod.rs
crates/bubbaloop-mcp-server/: Cargo.toml  README.md
crates/bubbaloop-mcp-server/src/: lib.rs  main.rs
crates/bubbaloop-node/: Cargo.toml  README.md  build.rs
crates/bubbaloop-node-sdk/: Cargo.toml
crates/bubbaloop-node-sdk/src/: config.rs  context.rs  lib.rs  prelude.rs  processor.rs  publisher.rs  schema.rs  shutdown.rs  sink.rs  source.rs  subscriber.rs
crates/bubbaloop-node/src/: config.rs  context.rs  discover.rs  envelope.rs  error.rs  get_sample.rs  health.rs  lib.rs  manifest.rs  proto_decoder.rs  publisher.rs  schema.rs  schemas.rs  shutdown.rs  subscriber.rs  zenoh_session.rs
crates/bubbaloop-nodes/cameras/: Cargo.toml
crates/bubbaloop-nodes/cameras/src/: lib.rs  main.rs  node.rs
crates/bubbaloop-nodes/foxglove/: Cargo.toml  pixi.toml
crates/bubbaloop-nodes/inference/: Cargo.toml  pixi.toml
crates/bubbaloop-nodes/mcap-recorder/: Cargo.toml
crates/bubbaloop-nodes/mcap-recorder/src/: lib.rs  main.rs  node.rs
crates/bubbaloop-nodes/openmeteo/: Cargo.toml  pixi.toml
crates/bubbaloop-nodes/openmeteo/src/: api.rs  lib.rs  main.rs  node.rs  openmeteo_node.rs
crates/bubbaloop-nodes/recorder/: Cargo.toml  pixi.toml
crates/bubbaloop-schemas/: Cargo.toml  build.rs
crates/bubbaloop-schemas/protos/: daemon.proto  header.proto
crates/bubbaloop-schemas/src/: config.rs  lib.rs
crates/bubbaloop-tui/: Cargo.toml
crates/bubbaloop-tui/src/: app.rs  main.rs
crates/bubbaloop-tui/src/config/: registry.rs
crates/bubbaloop-tui/src/daemon/: client.rs
crates/bubbaloop-tui/src/ui/: home.rs  mod.rs  services.rs
crates/bubbaloop-tui/src/ui/nodes/: detail.rs  list.rs  logs.rs
crates/bubbaloop/examples/: test_mesh.rs
crates/bubbaloop/src/: api.rs  config.rs  lib.rs  marketplace.rs  registry.rs  skill_hub.rs  templates.rs  validation.rs
crates/bubbaloop/src/agent/: claude.rs  dispatch.rs  dispatch_security.rs  gateway.rs  heartbeat.rs  memory.rs  mod.rs  ollama.rs  prompt.rs  rules.rs  runtime.rs  scheduler.rs  soul.rs
crates/bubbaloop/src/agent/memory/: episodic.rs  mod.rs  semantic.rs
crates/bubbaloop/src/agent/provider/: claude.rs  mod.rs  ollama.rs
crates/bubbaloop/src/cli/: agent.rs  agent_client.rs  agent_setup.rs  daemon.rs  daemon_client.rs  dataflow.rs  debug.rs  doctor.rs  launch.rs  login.rs  marketplace.rs  mod.rs  node.rs  plugin.rs  skill.rs  status.rs  system_utils.rs  up.rs  zenoh_session.rs
crates/bubbaloop/src/cli/doctor/: checks.rs  fixes.rs  mod.rs
crates/bubbaloop/src/cli/node/: build.rs  install.rs  lifecycle.rs  list.rs  manage.rs  mod.rs
crates/bubbaloop/src/daemon/: belief_updater.rs  constraints.rs  context_provider.rs  federated.rs  gateway.rs  mission.rs  mod.rs  native_supervisor.rs  node_manager.rs  reactive.rs  registry.rs  supervisor.rs  systemd.rs  util.rs  world_state_sweeper.rs  zenoh_api.rs  zenoh_service.rs
crates/bubbaloop/src/daemon/builtin_drivers/: cron_task.rs  exec.rs  file_watch.rs  http_poll.rs  mod.rs  modbus.rs  mqtt.rs  system.rs  tcp_listen.rs  udp_listen.rs  webhook.rs
crates/bubbaloop/src/daemon/node_manager/: build.rs  health.rs  lifecycle.rs  mod.rs
crates/bubbaloop/src/daemon/telemetry/: circuit_breaker.rs  mod.rs  sampler.rs  storage.rs  types.rs
crates/bubbaloop/src/mcp/: auth.rs  daemon_platform.rs  mock_platform.rs  mod.rs  platform.rs  rbac.rs  tools.rs
crates/bubbaloop/src/plugin/: config.rs  error.rs  mod.rs  runner.rs  traits.rs
crates/bubbaloop/src/skills/: mod.rs  resolve.rs  runtime.rs
crates/bubbaloop/src/skills/builtin/: exec.rs  http_poll.rs  mod.rs  system.rs  tcp_listen.rs  webhook.rs
crates/bubbaloop/src/tui/: app.rs  mod.rs
crates/bubbaloop/src/tui/config/: official_nodes.yaml  registry.rs
crates/bubbaloop/src/tui/daemon/: client.rs  mod.rs
crates/bubbaloop/src/tui/ui/: home.rs  mod.rs  services.rs
crates/bubbaloop/src/tui/ui/components/: mod.rs  (+1 more)
crates/bubbaloop/tests/: integration_mcp.rs
crates/bubbaloop_launch/: Cargo.toml
crates/bubbaloop_launch/src/: cli.rs  lib.rs
crates/bubbaloop_launch/src/config/: launch_file.rs  mod.rs  substitution.rs
crates/bubbaloop_launch/src/runtime/: dependency.rs  executor.rs  mod.rs  process.rs
crates/rtsp_camera/: Cargo.toml
crates/rtsp_camera/src/: config.rs
crates/storage/: Cargo.toml  node.yaml  pixi.toml
crates/storage/configs/: storage.yaml
crates/storage/src/: config.rs  error.rs  header.rs  lancedb_client.rs  lib.rs  recorder.rs
examples/nodes/rust/gpio-sensor/: Cargo.toml  node.yaml
examples/nodes/rust/gpio-sensor/configs/: motion.yaml  temperature.yaml
examples/nodes/rust/gpio-sensor/src/: config.rs  gpio_sensor_node.rs  main.rs
examples/rust-plugin-minimal/: Cargo.toml
examples/rust-plugin-minimal/src/: main.rs
python-sdk/: CLAUDE.md  CONTRIBUTING.md  README.md  pixi.toml  pyproject.toml
python-sdk/bubbaloop_sdk/: __init__.py  context.py  decode_sample.py  discover.py  get_sample.py  health.py  manifest.py  node.py  publisher.py  schema.py  schema_registry.py  subscriber.py
python-sdk/tests/: test_context.py  test_manifest.py  test_publisher_cbor_local.py
(+405 files in other folders)
