[workspace]
members = [
    "crates/bubbaloop",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Edgar Riba <edgar.riba@gmail.com>"]
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
# Protobuf serialization
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
prost-reflect = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# ROS-Z pub/sub
ros-z = { git = "https://github.com/ZettaScaleLabs/ros-z.git", branch = "main", features = ["protobuf"] }

# Zenoh
zenoh = "1.7"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI
argh = "0.1"
ctrlc = "3.4"

# Error handling
thiserror = "2.0"

# TUI
ratatui = "0.30"
crossterm = "0.28"

# Directories
dirs = "6"

# Error handling
anyhow = "1"

# Hex encoding
hex = "0.4"

# internal dependencies
bubbaloop = { path = "crates/bubbaloop" }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"
panic = "abort"
