[workspace]
members = [
    "crates/bubbaloop",
]
resolver = "2"

[workspace.package]
version = "0.0.6"
authors = ["Edgar Riba <edgar.riba@gmail.com>"]
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
# Protobuf serialization
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
prost-reflect = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Zenoh
zenoh = "1.7"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI
argh = "0.1"
ctrlc = "3.4"

# Error handling
thiserror = "2.0"

# Directories
dirs = "6"

# Error handling
anyhow = "1"

# HTTP client (Claude API)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Embedded database (memory layer)
rusqlite = { version = "0.33", features = ["bundled"] }

# Cron expression parsing (scheduler)
cron = "0.15"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Hex encoding
hex = "0.4"

# HTTP server (dashboard)
axum = { version = "0.8", features = ["ws"] }

# Embedded static files (dashboard)
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# WebSocket proxy (dashboard)
tokio-tungstenite = "0.26"

# MCP server
rmcp = { version = "0.15", features = ["server", "macros", "transport-streamable-http-server", "transport-io"] }
schemars = "1.0"

# internal dependencies
bubbaloop = { path = "crates/bubbaloop" }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"
