[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "bubbaloop-sdk"
version = "0.1.0"
description = "Bubbaloop Node SDK for Python"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Kornia Team", email = "edgar.riba@gmail.com" }]
requires-python = ">=3.10"
keywords = ["robotics", "physical-ai", "zenoh", "pub-sub"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "eclipse-zenoh>=1.7,<2",
    "protobuf>=4.0",
    "pyyaml>=6.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/kornia/bubbaloop/issues"
"Source Code" = "https://github.com/kornia/bubbaloop"
Homepage = "https://github.com/kornia/bubbaloop"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bubbaloop_sdk*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = "--color=yes -v"
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
branch = true
source = ["bubbaloop_sdk/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "def __repr__",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces flake8, isort, pycodestyle)
# Follows the same pattern as kornia/kornia
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "RUF", # Ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["bubbaloop_sdk"]
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
# __init__.py files may re-export names (star imports allowed)
"*/__init__.py" = ["F401", "F403"]
# tests don't need docstrings and use assert freely
"tests/*" = ["S101", "D"]
