[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "bubbaloop-sdk"
version = "0.1.0"
description = "Bubbaloop Node SDK for Python"
requires-python = ">=3.9"
dependencies = [
    "eclipse-zenoh>=1.8,<2",
    "cbor2>=5.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bubbaloop_sdk*"]
