[package]
name = "bubbaloop-daemon"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Bubbaloop daemon - central service for node management"

[[bin]]
name = "bubbaloop-daemon"
path = "src/main.rs"

[dependencies]
# Protobuf
prost.workspace = true
prost-types.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# Zenoh
zenoh.workspace = true

# D-Bus for systemd communication
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Logging
log.workspace = true
env_logger.workspace = true

# CLI
argh.workspace = true
ctrlc.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
dirs = "6"
uuid = { version = "1", features = ["v4"] }

# HTTP server for TUI/dashboard access
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[build-dependencies]
prost-build.workspace = true
