[package]
name = "bubbaloop-node"
version = "0.1.0"
edition = "2021"
description = "Batteries-included SDK for writing bubbaloop nodes"
license = "Apache-2.0"

[dependencies]
zenoh = { version = "1.8", features = ["shared-memory", "unstable"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
argh = "0.1"
ctrlc = "3.4"
anyhow = "1"
thiserror = "2.0"
hostname = "0.4"
async-trait = "0.1"
ciborium = "0.2"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3"

# Opt out of the parent bubbaloop workspace
[workspace]
