[package]
name = "bubbaloop-schemas"
version = "0.1.0"
edition = "2021"
description = "Protobuf schemas for bubbaloop nodes"

[features]
default = []
ros-z = ["dep:ros-z"]

[dependencies]
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
ros-z = { git = "https://github.com/ZettaScaleLabs/ros-z.git", branch = "main", features = ["protobuf"], optional = true }

[build-dependencies]
prost-build = "0.14"

# Opt out of the parent bubbaloop workspace
[workspace]
