[package]
name = "bubbaloop-schemas"
version = "0.1.0"
edition = "2021"
description = "Protobuf schemas for bubbaloop nodes"

[features]
default = []
descriptor = ["dep:prost-reflect"]
config = ["dep:serde_yaml", "dep:thiserror"]

[dependencies]
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
prost-reflect = { version = "0.16", optional = true }
serde_yaml = { version = "0.9", optional = true }
thiserror = { version = "2.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[build-dependencies]
prost-build = "0.14"

# Opt out of the parent bubbaloop workspace
[workspace]
