[package]
name = "bubbaloop-tui"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Terminal user interface for Bubbaloop"

[[bin]]
name = "bubbaloop"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui.workspace = true
crossterm.workspace = true

# Zenoh for daemon communication
zenoh = { version = "1.6.2", default-features = false, features = ["transport_tcp"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Directories
dirs.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Misc
whoami = "1"
