[package]
name = "bubbaloop"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Bubbaloop - Physical AI camera streaming platform"

[[bin]]
name = "bubbaloop"
path = "src/bin/bubbaloop.rs"

[dependencies]
# Protobuf
prost.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true

# Serialization
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# ROS-Z
ros-z.workspace = true

# CLI
argh.workspace = true
log.workspace = true
env_logger.workspace = true
walkdir = "2"

# TUI framework
ratatui.workspace = true
crossterm.workspace = true

# Zenoh for daemon communication
zenoh.workspace = true

# Async runtime
tokio.workspace = true

# Directories
dirs.workspace = true

# Misc
whoami = "1"
hostname = "0.4"
hex.workspace = true

# D-Bus for systemd communication (daemon)
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Async (daemon)
futures.workspace = true

# Signal handling (daemon)
ctrlc.workspace = true

# UUID generation (daemon)
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
prost-build.workspace = true
