[package]
name = "bubbaloop"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Bubbaloop - Physical AI camera streaming platform"

[[bin]]
name = "bubbaloop"
path = "src/bin/bubbaloop.rs"

[[bin]]
name = "bubbaloop-dash"
path = "src/bin/bubbaloop_dash.rs"
required-features = ["dashboard"]

[dependencies]
# Protobuf
prost.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true

# Serialization
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# ROS-Z
ros-z.workspace = true

# CLI
argh.workspace = true
log.workspace = true
env_logger.workspace = true
walkdir = "2"

# TUI framework
ratatui.workspace = true
crossterm.workspace = true

# Zenoh for daemon communication
zenoh.workspace = true

# Async runtime
tokio.workspace = true

# Directories
dirs.workspace = true

# Misc
whoami = "1"
hostname = "0.4"
hex.workspace = true

# D-Bus for systemd communication (daemon)
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Async (daemon)
futures.workspace = true

# Signal handling (daemon)
ctrlc.workspace = true

# UUID generation (daemon)
uuid = { version = "1", features = ["v4"] }

# Dashboard server (optional)
axum = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }

# MCP server (optional)
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[features]
default = ["dashboard"]
dashboard = ["dep:axum", "dep:rust-embed", "dep:mime_guess", "dep:tokio-tungstenite"]
mcp = ["dep:rmcp", "dep:schemars", "dep:axum"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
prost-build.workspace = true
