[package]
name = "bubbaloop"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Bubbaloop - Physical AI camera streaming platform"

[[bin]]
name = "bubbaloop"
path = "src/bin/bubbaloop.rs"

[[bin]]
name = "bubbaloop-dash"
path = "src/bin/bubbaloop_dash.rs"
required-features = ["dashboard"]

[dependencies]
# Protobuf
prost.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true

# Serialization
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# CLI
argh.workspace = true
log.workspace = true
env_logger.workspace = true
walkdir = "2"

# Zenoh for daemon communication
zenoh.workspace = true

# Async runtime
tokio.workspace = true

# Directories
dirs.workspace = true

# Misc
whoami = "1"
hostname = "0.4"
hex.workspace = true

# D-Bus for systemd communication (daemon)
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Async (daemon)
futures.workspace = true

# Signal handling (daemon)
ctrlc.workspace = true

# UUID generation (daemon)
uuid = { version = "1", features = ["v4"] }

# HTTP server (used by MCP + dashboard)
axum.workspace = true

# Dashboard server (optional)
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }

# Agent layer (Claude API + memory + scheduler)
reqwest.workspace = true
rusqlite.workspace = true
cron.workspace = true

# MCP server (core)
rmcp.workspace = true
schemars.workspace = true
tower_governor = "0.8"

[features]
default = ["dashboard"]
dashboard = ["dep:rust-embed", "dep:mime_guess", "dep:tokio-tungstenite"]
test-harness = ["rmcp/client"]

[dev-dependencies]
tempfile = "3"
rmcp = { workspace = true, features = ["client", "server", "macros"] }

[build-dependencies]
prost-build.workspace = true
