[package]
name = "my-plugin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "my-plugin"
path = "src/main.rs"

[dependencies]
bubbaloop = { git = "https://github.com/kopernikusai/bubbaloop.git" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
log = "0.4"
