[package]
name = "foxglove_bridge"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Foxglove bridge for camera visualization"

[dependencies]
# CLI and logging
argh.workspace = true
ctrlc.workspace = true
env_logger.workspace = true
log.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# ROS-Z pub/sub
ros-z.workspace = true
zenoh.workspace = true

# Protobuf serialization
prost.workspace = true
prost-types.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Foxglove WebSocket server
foxglove = "0.16.1"

# Schema crate
bubbaloop.workspace = true

# Error handling
thiserror.workspace = true
hostname = "0.4"

[[bin]]
name = "foxglove_bridge"
path = "src/bin/foxglove_bridge.rs"
