[package]
name = "mcap-recorder-node"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "MCAP recorder for ROS-Z topics in Bubbaloop"

[[bin]]
name = "mcap-recorder-node"
path = "src/main.rs"

[dependencies]
# Core library
bubbaloop.workspace = true

# CLI and logging
argh.workspace = true
ctrlc.workspace = true
env_logger.workspace = true
log.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true
flume.workspace = true

# ROS-Z pub/sub
ros-z.workspace = true
zenoh.workspace = true

# Protobuf serialization
prost.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
thiserror.workspace = true
async-trait.workspace = true

# MCAP file format
mcap.workspace = true
