[package]
name = "openmeteo"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Open-Meteo weather data publisher for Zenoh"

[dependencies]
# CLI and logging
argh.workspace = true
ctrlc.workspace = true
env_logger.workspace = true
log.workspace = true

# Async runtime
tokio.workspace = true

# HTTP client for Open-Meteo API
reqwest.workspace = true

# ROS-Z pub/sub
ros-z.workspace = true
zenoh.workspace = true

# Protobuf serialization
prost.workspace = true
prost-types.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
thiserror.workspace = true

# Schema crate
bubbaloop.workspace = true

[[bin]]
name = "openmeteo_node"
path = "src/bin/openmeteo_node.rs"
