[package]
name = "mcap_recorder"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "MCAP recorder for ROS-Z topics"

[dependencies]
# CLI and logging
argh.workspace = true
ctrlc.workspace = true
env_logger.workspace = true
log.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# ROS-Z pub/sub
ros-z.workspace = true
zenoh.workspace = true

# Protobuf serialization
prost.workspace = true
prost-types.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Channel
flume.workspace = true

# MCAP file format
mcap = "0.24"

# Schema crate
bubbaloop.workspace = true

# Error handling
thiserror.workspace = true
hostname = "0.4"

[[bin]]
name = "mcap_recorder"
path = "src/bin/mcap_recorder.rs"
